--- a/index.html
+++ b/index.html
@@ -1,7 +1,23 @@
 <!DOCTYPE html>
 <html>
+
+<head>
+	<script src="./jquery.min.js"></script>
+</head>
+
 <body>
-<h1>Hello World</h1>
-<p>I'm hosted with GitHub Pages.</p>
+	<h1>Hello World</h1>
+	<p>I'm hosted with GitHub Pages.</p>
+	<span></span>
 </body>
+<script>
+	function getInt () {
+		return parseInt(Math.random() * 255);
+	}
+	function setColor() {
+		document.getElementsByTagName('h1').style='color: rgb('+getInt() + ',' + getInt() + ',' + getInt()+')';
+	}
+	setInterval(setColor, 500);
+</script>
+
 </html>
